--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
-body {
+* {
   margin: 0;
   padding: 0;
 }
 
 .container {
+  width: 100vw;
+  height: 100vh;
   color: #656565;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -29,12 +31,12 @@ body {
   display: inline-block;
 }
 
-.top-content .top-left-content .app-launcher-icon:hover {
-  background-color: #215aba;
-}
-
 .top-content .top-left-content .app-launcher-icon i {
   word-spacing: -1px;
+}
+
+.top-content .top-left-content .app-launcher-icon:hover {
+  background-color: #215aba;
 }
 
 .top-content .top-left-content .title-header {
@@ -47,7 +49,7 @@ body {
   border-bottom: 1.5px solid white;
 }
 
-/* top middle styles */
+/* top middle content styles */
 .top-content .top-middle-content {
   vertical-align: top;
   display: inline-block;
@@ -66,6 +68,11 @@ body {
   border: none;
   position: relative;
   top: 15%;
+}
+
+.top-content .top-middle-content .search-container:hover {
+  padding: 1px;
+  background-color: #fafafa;
 }
 
 .top-content .top-middle-content .search-container .search-box {
@@ -98,7 +105,7 @@ body {
 }
 
 
-/* top right styles */
+/* top right content styles */
 .top-content .top-right-content {
   vertical-align: top;
   display: inline-block;
@@ -140,7 +147,7 @@ body {
   width: 23%;
   height: 100%;
   vertical-align: top;
-  box-shadow: 0 1px 0 0 20px #656565;
+  border-right: 0.3px solid #d9d9d9;
 }
 
 .bottom-left-content .menu-container {
@@ -158,6 +165,15 @@ body {
   margin: 0;
   padding: 0;
   line-height: 3;
+}
+
+.bottom-left-content .categories .category-name {
+  display: inline-block;
+  width: 75%;
+}
+
+.bottom-left-content .categories .number-of-item {
+  display: none;
 }
 
 .bottom-left-content .categories li:not(.create-category, .group-icon-container) {
@@ -275,7 +291,6 @@ body {
   display: inline-block;
   width: 12%;
   font-weight: 300;
-  font-size: 16px;
   text-align: right;
 }
 
